test-cases/final-dump/generic_missing_param.exp
Error detected during preliminary processing of module generic_missing_param
final-dump/generic_missing_param.wybe:1:27: Constructors for type generic_missing_param use unbound type variable(s) ?U
